--- a/index.html
+++ b/index.html
@@ -1,7 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Saketh Bantu | Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Saketh Bantu</h1>
+        <p>Data Engineer | Cloud & Analytics Enthusiast</p>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Experienced Data Engineer with 5+ years in data analysis, transformation, and visualization. Passionate about turning raw data into actionable insights.</p>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Python (Pandas, NumPy, Matplotlib, Seaborn, Scikit-Learn)</li>
+            <li>SQL (MySQL, PostgreSQL, Oracle, SQL Server)</li>
+            <li>Data Visualization: Tableau, Power BI</li>
+            <li>Cloud Platforms: AWS (S3, EC2, Redshift, Lambda, Glue)</li>
+            <li>ETL & Data Integration: Informatica Cloud, AWS Glue, SSIS</li>
+        </ul>
+    </section>
+
+    <section id="experience">
+        <h2>Experience</h2>
+        <h3>Toyota Forklift NW | Data Engineer</h3>
+        <p>Designed and implemented real-time GPS data pipelines using AWS Kinesis, Apache Kafka, and MongoDB Streams.</p>
+        <h3>Eastern Illinois University | Data Analyst</h3>
+        <p>Developed Tableau and Grafana dashboards to support business intelligence initiatives.</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <h3>Real-Time Fleet Monitoring System</h3>
+        <p>Developed a real-time data pipeline to track forklift telemetry using AWS Kinesis, Kafka, and MongoDB.</p>
+        <h3>Automated ETL Pipelines</h3>
+        <p>Built ETL frameworks using AWS Glue and Lambda for data warehouse automation.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:sakethbantu13@gmail.com">sakethbantu13@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/bantusaketh/" target="_blank">LinkedIn Profile</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Saketh Bantu. All rights reserved.</p>
+    </footer>
 </body>
 </html>
